--- a/time-tracker/package.json
+++ b/time-tracker/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.3",
     "file-saver": "^2.0.5",
     "moment": "^2.30.1",
+    "pwa-asset-generator": "^6.4.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
@@ -27,16 +28,18 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/file-saver": "^2.0.5",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
-    "@types/file-saver": "^2.0.5",
     "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vite-plugin-pwa": "^0.20.5",
+    "workbox-window": "^7.1.0"
   }
 }
